What's new...

Oct 7/2016 : JF 12.0.0 released!
  - added new Controller library (talk to PLCs)
  - added jfDataLogger/0.1
    - log PLC data
  - added support to build jfLinux with Arch
    - but the build fails in ArchISO somewhere

Jun 4/2016 : JF 11.4.0 released!
  - jfDHCP/0.7
    - new : support for custom options

Jun 2/2016 : JF 11.3.0 released!
  - jPhoneLite/1.10.0
    - added GSM codec

Mar 14/2016 : JF 11.2.0 released!
  - added firewall exceptions in Wix config for services (except jfSTUN which uses dynamic ports)
  - jfProxy/0.6
  - jfDHCP/0.6
  - jfDNS/0.5

Feb 23/2016 : JF 11.1.0 released!
  - VoIP : many improvements to message handling
    - jPhoneLite/1.9.11
      - should fix bug #35
    - jPBXlite/0.26
    - jfBroadcast/0.36
  - fix : remove \r from JTextArea from service config apps
    - jfProxy/0.5
    - jfDHCP/0.5
    - jfDNS/0.4
    - jfSTUN/0.3

Feb 20/2016 : JF 11.0.0 released!
  - created Windows Service wrapper
  - converted jfProxy/0.4, jfDHCP/0.4, jfDNS/0.3, jfSTUN/0.2 and jPBXlite/0.25 to Windows services
  - jfBroadcast/0.35
    - added "Fix 'errors' in List..." button

Jan 22/2016 : JF 10.8.0 released!
  - jPhoneLite/1.9.10
    - fixed audio problem on some systems

Jan 18/2016 : JF 10.7.0 released!
  - jfDHCP/0.3
    - support for multiple pools

Dec 27/2015 : JF 10.6.0 released!
  - jfBroadcast/0.34
    - fix tray icon
  - jfPaint/0.21
    - add enter/escape hot keys to dialog boxes
  - jfVNC/0.1
    - first release as seperate project

Dec 17/2015 : JF 10.5.0 released!
  - jfPaint/0.20
    - misc fixes
  - jfBroadcast/0.33
    - minor fix
  - NEW: javaforce.utils.RunAs
    - gui to run psexec (runas) (windows)
  - jfPasswords/0.15 - 0.16
    - 0.15 : changed startup behaviour (do not show window on startup)
    - 0.16 : added 'avoid ambiguous chars' option

Sept 24/2015 : JF 10.4.0 released!
  - SIPClient : added display name
  - added javaforce.JFLockFile
  - jPhoneLite/1.9.9 released!
    - desktop and android released