@@ -1,5 +1,12 @@
 What's new...
 
+Oct 18/2016 : JF 12.1.0 released!
+  - fix : s7 tags were limited to block number 127
+  - jfDataLogger/0.2
+  - forget to mention new support for using GPIO pins on Raspberry Pi
+    - see javaforce/pi/Test
+    - uses a new WebUI interface that is currently in development
+
 Oct 7/2016 : JF 12.0.0 released!
   - added new Controller library (talk to PLCs)
   - added jfDataLogger/0.1
